openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
  labels:
    app: websocket-server
spec:
  selector:
    app: websocket-server
  ports:
  - port: 8080
    targetPort: 8080
    name: http
    protocol: TCP
  type: ClusterIP
